# coreconf-work

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt  config.cmake  requirements.txt
include/: CMakeLists.txt  definitions.h
include/helpers/: resolve.h
python/: README.md
python/context_app/: secret.json
python/context_device/: secret.json
python/src/: base.py  gateway.py  t-node.py
python/src/packet/: coap_packet.py
src/: CMakeLists.txt  app.py  base.py  client.c  device.py  device_fetch.py  device_ipatch.py  gateway.py  server.c  t-node.py
src-c/: CMakeLists.txt  README.md
src-c/include/: CMakeLists.txt  definitions.h
src-c/include/common/: definitions.h
src-c/include/config/: oscore.h
src-c/src/: CMakeLists.txt  client.c  server.c
src-c/src/client/: CMakeLists.txt  client.c
src-c/src/config/: oscore.c
src-c/src/helpers/: resolve.c
src-c/src/server/: CMakeLists.txt  server.c
src-c/tests/: CMakeLists.txt  unittest.c
src-c/tests/common/: common.h
src/client/: CMakeLists.txt  client.c
src/common/: defs.py
src/model/: basic-sensor.sid  basic-sensor.yang  temperature.sid  temperature.yang
src/packet/: coap_packet.py
src/server/: CMakeLists.txt  server.c
